cabal-version:      3.0
name:               haskellerz
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Julian K. Arni
maintainer:         jkarni@garnix.io
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable haskellerz
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.19.1.0,
                      servant,
                      servant-server,
                      servant-client,
                      servant-client-core,
                      http-client,
                      warp
    hs-source-dirs:   exe
    default-language: Haskell2010

